--- a/landing-page.html
+++ b/landing-page.html
@@ -902,7 +902,7 @@
                         <li><a href="#destinations">Top Deals</a></li>
                         <li><a href="#testimonials">Reviews</a></li>
                         <li><a href="#faq">FAQ</a></li>
-                        <li><a href="flight-vault.html">Flight Vault</a></li>
+                        <li><a href="/flight-vault.html">Flight Vault</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </nav>
