--- a/landing-page.html
+++ b/landing-page.html
@@ -913,6 +913,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
+                <img src='/images/flight-over-ocean-stockcake.jpg'
                 <h1>Unlock Travel's Best-Kept Secrets</h1>
                 <h2>Join thousands of savvy travellers who save up to 80% on flights with insider deals that never reach comparison sites.</h2>
                 <div class="cta-buttons">
