--- a/landing-page.html
+++ b/landing-page.html
@@ -913,7 +913,7 @@
     <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstockcake.com%2Fi%2Fflight-over-ocean_1257221_114103&psig=AOvVaw2JZkw9lhYqpe8VY25YtN3n&ust=1744870207655000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCICS6Jvy24wDFQAAAAAdAAAAABAE" alt="flight">
+                <img style="width:auto; height:auto; display:flex;"  src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fstockcake.com%2Fi%2Fflight-over-ocean_1257221_114103&psig=AOvVaw2JZkw9lhYqpe8VY25YtN3n&ust=1744870207655000&source=images&cd=vfe&opi=89978449&ved=0CBYQjRxqFwoTCICS6Jvy24wDFQAAAAAdAAAAABAE" alt="flight">
                 <h1>Unlock Travel's Best-Kept Secrets</h1>
                 <h2>Join thousands of savvy travellers who save up to 80% on flights with insider deals that never reach comparison sites.</h2>
                 <div class="cta-buttons">
