--- a/flight-vault.html
+++ b/flight-vault.html
@@ -778,12 +778,12 @@
                 <nav>
                     <button class="close-menu">✕</button>
                     <ul>
-                        <li><a href="landing-page.html#features">How It Works</a></li>
-                        <li><a href="landing-page.html#destinations">Top Deals</a></li>
-                        <li><a href="landing-page.html#testimonials">Reviews</a></li>
-                        <li><a href="landing-page.html#faq">FAQ</a></li>
+                        <li><a href="index.html#features">How It Works</a></li>
+                        <li><a href="index.html#destinations">Top Deals</a></li>
+                        <li><a href="index.html#testimonials">Reviews</a></li>
+                        <li><a href="index.html#faq">FAQ</a></li>
                         <li><a href="flight-vault.html">Flight Vault</a></li>
-                        <li><a href="landing-page.html#contact">Contact</a></li>
+                        <li><a href="index.html#contact">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -1095,10 +1095,10 @@
                 <div class="footer-column">
                     <h3>Quick Links</h3>
                     <ul>
-                        <li><a href="landing-page.html">Home</a></li>
-                        <li><a href="landing-page.html#features">How It Works</a></li>
-                        <li><a href="landing-page.html#destinations">Top Deals</a></li>
-                        <li><a href="landing-page.html#testimonials">Reviews</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#features">How It Works</a></li>
+                        <li><a href="index.html#destinations">Top Deals</a></li>
+                        <li><a href="index.html#testimonials">Reviews</a></li>
                         <li><a href="flight-vault.html">Flight Vault</a></li>
                     </ul>
                 </div>
