--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&family=Open+Sans:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="resources/css/index.css">
+    <link rel="stylesheet" href="/resources/css/index.css">
 </head>
 <body>
     <!-- Header & Navigation -->
@@ -784,6 +784,6 @@
         <a href="#access" class="alert-link">Access Vault →</a>
     </div>
     
-    <script src="resources/js/script.js"></script>
+    <script src="/resources/js/script.js"></script>
 </body>
 </html>
