--- a/index.html
+++ b/index.html
@@ -769,6 +769,6 @@
         <a href="#access" class="alert-link">Access Vault →</a>
     </div>
     
-    <script src="resources/js/script.js"></script>
+    <script src="/resources/js/script.js"></script>
 </body>
 </html>
